document pytest in HACKING, tox.ini and .travis.yml

--- a/tox.ini
+++ b/tox.ini
@@ -1,9 +1,18 @@
+# tox (https://tox.readthedocs.io/) is a tool for running tests
+# in multiple virtualenvs. This configuration file will run the
+# test suite on all supported python versions. To use it, "pip install tox"
+# and then run "tox" from this directory.
+
 [tox]
-envlist = py27,py35,pypy
+envlist = py34, py35, py36, pypy, jython
+skip_missing_interpreters = true
 
 [testenv]
 deps =
-    .[test]
+    pdfrw
+    pytest
+    pikepdf
+    numpy
+    scipy
 commands =
-    python setup.py test -q
-
+    pytest
