run tox on travis

--- a/tox.ini
+++ b/tox.ini
@@ -4,7 +4,7 @@
 # and then run "tox" from this directory.
 
 [tox]
-envlist = py34, py35, py36, pypy, jython
+envlist = py34, py35, py36, py37, py38, pypy, jython
 skip_missing_interpreters = true
 
 [testenv]
@@ -15,4 +15,4 @@ deps =
     numpy
     scipy
 commands =
-    pytest
+    python -m pytest
