--- a/.travis.yml
+++ b/.travis.yml
@@ -13,6 +13,7 @@ matrix:
             - poppler-utils
             - netpbm
             - ghostscript
+            - mupdf-tools
     - name: "python 3.8 Windows"
       os: windows
       language: shell       # 'language: python' is an error on Travis CI Windows
