--- a/appveyor.yml
+++ b/appveyor.yml
@@ -16,12 +16,12 @@ environment:
     - PYTHON: "C:\\Python37-x64"
 
 install:
-  - "%PYTHON%\\python.exe -m pip install wheel pytest pdfrw pillow pyinstaller pikepdf"
+  - "%PYTHON%\\python.exe -m pip install tox"
 
 build: off
 
 test_script:
-  - "%PYTHON%\\python.exe setup.py test"
+  - "%PYTHON%\\python.exe -m tox"
 
 after_test:
   - "%PYTHON%\\python.exe setup.py bdist_wheel"
