.travis.yml: use bionic instead of xenial

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,8 @@
 language: python
 matrix:
   include:
-    - name: "python 3.7 Xenial"
-      dist: xenial
-      python: 3.7
+    - name: "Ubuntu Bionic"
+      dist: bionic
       addons:
         apt:
           packages:
