--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,8 @@
 language: python
 matrix:
   include:
-    - name: "Ubuntu Xenial"
-      dist: xenial
+    - name: "Ubuntu Bionic"
+      dist: bionic
       addons:
         apt:
           packages:
