--- a/appveyor.yml
+++ b/appveyor.yml
@@ -7,13 +7,13 @@ environment:
 #    - PYTHON: "C:\\Python34"
 #    - PYTHON: "C:\\Python35"
 #    - PYTHON: "C:\\Python36"
-#    - PYTHON: "C:\\Python37"
+    - PYTHON: "C:\\Python37"
 #    - PYTHON: "C:\\Python27-x64"
 #    - PYTHON: "C:\\Python33-x64"
 #    - PYTHON: "C:\\Python34-x64"
 #    - PYTHON: "C:\\Python35-x64"
 #    - PYTHON: "C:\\Python36-x64"
-    - PYTHON: "C:\\Python37-x64"
+#    - PYTHON: "C:\\Python37-x64"
 
 install:
   - "%PYTHON%\\python.exe -m pip install tox wheel pyinstaller"
