--- a/tox.ini
+++ b/tox.ini
@@ -4,7 +4,7 @@
 # and then run "tox" from this directory.
 
 [tox]
-envlist = py35, py36, py37, py38, py39, py310
+envlist = py37, py38, py39, py310
 skip_missing_interpreters = true
 
 [testenv]
